Revert "Set up fragment-based navigation architecture with Login as start destination"
This reverts commit 2d0fa30f2c0804611ee1a9edb3c39628ba579a50.

--- a/Android/app/src/main/res/layout/login_fragment.xml
+++ b/Android/app/src/main/res/layout/login_fragment.xml
@@ -5,24 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragment.LoginFragment">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="24dp">
+        android:text="Hello" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LOGIN PLACEHOLDER"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btnToFetch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="FAKE LOGIN BUTTON"
-            android:layout_marginTop="16dp" />
-    </LinearLayout>
 </FrameLayout>
