Layout for Fetch screen.
1) Description text
2) Textbox to input url
3) Button to click
4) Loading bar
5) In later versions once logic is up to fetch, will add the layout for the tiled images for user selection. Now is placeholder
6) Play button to move to the play fragment.

--- a/Android/app/src/main/res/layout/fragment_fetch.xml
+++ b/Android/app/src/main/res/layout/fragment_fetch.xml
@@ -1,20 +1,100 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fetchLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".fragment.FetchFragment"
     android:padding="24dp">
 
+    <!-- Title -->
     <TextView
+        android:id="@+id/tvFetchTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fetch Screen Placeholder"
-        android:textSize="20sp" />
+        android:text="Fetch Game Data"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Description -->
+    <TextView
+        android:id="@+id/tvFetchDesc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Enter the URL to fetch your data before playing."
+        android:textSize="16sp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tvFetchTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- URL input textbox -->
+    <EditText
+        android:id="@+id/etUrl"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter URL here"
+        android:inputType="textUri"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tvFetchDesc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnFetch" />
+
+    <!-- Fetch Button -->
+    <Button
+        android:id="@+id/btnFetch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fetch"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tvFetchDesc"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Loading bar -->
+    <ProgressBar
+        android:id="@+id/fetchProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/btnFetch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp" />
+
+    <!-- Placeholder image -->
+    <ImageView
+        android:id="@+id/imgFetch"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/ic_launcher_foreground"
+        app:layout_constraintTop_toBottomOf="@id/fetchProgressBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Spacer -->
+    <View
+        android:id="@+id/spacer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/imgFetch"
+        app:layout_constraintBottom_toTopOf="@id/btnToPlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Go to play button -->
     <Button
         android:id="@+id/btnToPlay"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Go to Play"
-        android:layout_marginTop="16dp" />
-</LinearLayout>
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
