--- a/Android/app/src/main/res/layout/fragment_play.xml
+++ b/Android/app/src/main/res/layout/fragment_play.xml
@@ -41,11 +41,10 @@
         android:rowCount="4"
         android:padding="5dp"/>
 
-    <ImageView
+    <FrameLayout
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:visibility="visible"
         android:layout_marginTop="10dp"/>
 
 <!--   Lst: this button will remove later-->
