--- a/Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,10 @@
         <action
             android:id="@+id/action_login_to_fetch"
             app:destination="@id/fetchFragment" />
+        <!-- added flag to be passed down to fetchFrag-->
+        <argument
+            android:name="isPaidUser"
+            app:argType="boolean"/>
     </fragment>
 
     <fragment
