--- a/Android/app/src/main/res/layout/fragment_play.xml
+++ b/Android/app/src/main/res/layout/fragment_play.xml
@@ -17,7 +17,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="start"
-            android:text="@string/matchCounter"
             android:textSize="20sp"
             android:textStyle="bold"/>
         
@@ -27,7 +26,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="@string/timer"
             android:textSize="20sp"
             android:textStyle="bold"/>
     </LinearLayout>
@@ -38,8 +36,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:columnCount="3"
-        android:rowCount="4"
-        android:padding="5dp"/>
+        android:rowCount="4"/>
 
     <FrameLayout
         android:id="@+id/adView"
