--- a/Android/app/src/main/res/layout/fragment_fetch.xml
+++ b/Android/app/src/main/res/layout/fragment_fetch.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fetchLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.FetchFragment"
     android:padding="24dp">
 
-    <!-- Title -->
+    <!-- Existing UI (title, URL, fetch button, etc.) -->
     <TextView
         android:id="@+id/tvFetchTitle"
         android:layout_width="wrap_content"
@@ -20,7 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Description -->
     <TextView
         android:id="@+id/tvFetchDesc"
         android:layout_width="0dp"
@@ -32,7 +29,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- URL input textbox -->
     <EditText
         android:id="@+id/etUrl"
         android:layout_width="0dp"
@@ -44,7 +40,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnFetch" />
 
-    <!-- Fetch Button -->
     <Button
         android:id="@+id/btnFetch"
         android:layout_width="wrap_content"
@@ -54,18 +49,16 @@
         app:layout_constraintTop_toBottomOf="@id/tvFetchDesc"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Loading bar -->
     <ProgressBar
         android:id="@+id/fetchProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/btnFetch"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Placeholder image -->
     <ImageView
         android:id="@+id/imgFetch"
         android:layout_width="180dp"
@@ -76,17 +69,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Spacer -->
-    <View
-        android:id="@+id/spacer"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/imgFetch"
-        app:layout_constraintBottom_toTopOf="@id/btnToPlay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Go to play button -->
+    <Button
+        android:id="@+id/btnConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm"
+        android:enabled="false"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/btnToPlay"
         android:layout_width="0dp"
