--- a/Android/app/src/main/res/layout/fragment_play.xml
+++ b/Android/app/src/main/res/layout/fragment_play.xml
@@ -50,4 +50,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to Leaderboard" />
+    <TextView
+        android:id="@+id/bestTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Best Time: --:--:--"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:layout_marginTop="8dp"/>
+
 </LinearLayout>
