1.add patch on post and get from/to back/front end 2.add adaptor/recycler/get request to leaderboard 3.add current score to leaderboard 3.add patch on win sound play

--- a/Android/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/Android/app/src/main/res/layout/fragment_leaderboard.xml
@@ -34,6 +34,7 @@
             android:id="@+id/yourScoreText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="0"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -50,13 +51,8 @@
         android:textSize="30dp"
         android:layout_gravity="center"/>
 
-    <TableLayout
-        android:id="@+id/leaderboardTable"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-
-    <View
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/scoreRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
