--- a/Android/app/src/main/res/layout/fragment_ad.xml
+++ b/Android/app/src/main/res/layout/fragment_ad.xml
@@ -5,15 +5,16 @@
     android:background="@color/black"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/adTextView"
+    <ImageView
+        android:id="@+id/adImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Loading Ad"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:gravity="center"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        android:contentDescription="Advertisement"/>
 
 
 
